[package]
name = "decal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.16", features = [
  "audio_thread_priority",
], optional = true }
cubeb = { version = "0.30.0", optional = true }
cubeb-core = { version = "0.30.0", optional = true }
dasp = { version = "0.11", optional = true }
rb = { version = "0.4", optional = true }
rubato = { version = "0.16", optional = true }
symphonia = { git = "https://github.com/aschey/Symphonia", rev = "327b803cb46141e4e2f31c2b8f8169a122c97ba5", optional = true }
symphonia-adapter-fdk-aac = { git = "https://github.com/aschey/symphonia-adapters", rev = "10079ca96b0228d09676ec82db45e49fa52f1a03", optional = true }
symphonia-adapter-libopus = { git = "https://github.com/aschey/symphonia-adapters", rev = "10079ca96b0228d09676ec82db45e49fa52f1a03", optional = true }
tap = "1"
thiserror = "2"
tracing = "0.1"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_System_Com",
], optional = true }

[dev-dependencies]
crossterm = "0.28.1"
reedline = "0.41.0"
stream-download = { version = "0.22.2", features = ["reqwest-rustls"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
output = ["dep:rb"]
output-cpal = ["output", "dep:cpal"]
output-cubeb = ["output", "cubeb", "cubeb-core", "windows-sys"]
decoder = ["dep:symphonia", "dep:dasp", "dep:rubato"]
decoder-aac = ["decoder", "symphonia/aac"]
decoder-fdk-aac = ["decoder", "symphonia-adapter-fdk-aac"]
decoder-libopus = ["decoder", "symphonia-adapter-libopus"]
decoder-adpcm = ["decoder", "symphonia/adpcm"]
decoder-alac = ["decoder", "symphonia/alac"]
decoder-flac = ["decoder", "symphonia/flac"]
decoder-caf = ["decoder", "symphonia/caf"]
decoder-isomp4 = ["decoder", "symphonia/isomp4"]
decoder-mp1 = ["decoder", "symphonia/mp1"]
decoder-mp2 = ["decoder", "symphonia/mp2"]
decoder-mp3 = ["decoder", "symphonia/mp3"]
decoder-mpa = ["decoder", "symphonia/mpa"]
decoder-ogg = ["decoder", "symphonia/ogg"]
decoder-pcm = ["decoder", "symphonia/pcm"]
decoder-aiff = ["decoder", "symphonia/aiff"]
decoder-vorbis = ["decoder", "symphonia/vorbis"]
decoder-wav = ["decoder", "symphonia/wav"]
decoder-ape = ["decoder", "symphonia/ape"]
decoder-id3v1 = ["decoder", "symphonia/id3v1"]
decoder-id3v2 = ["decoder", "symphonia/id3v2"]
decoder-all-codecs = ["decoder", "symphonia/all-codecs"]
decoder-all-formats = ["decoder", "symphonia/all-formats"]
decoder-all-meta = ["decoder", "symphonia/all-meta"]
decoder-all = ["decoder", "symphonia/all"]
decoder-simd = ["symphonia/opt-simd"]
cpal-asio = ["cpal/asio"]
cpal-oboe-shared-stdcxx = ["cpal/oboe-shared-stdcxx"]
cpal-jack = ["cpal/jack"]
mock = []
default = ["decoder-all", "output-cpal", "mock"]

[[example]]
name = "cubeb"
required-features = ["output-cubeb"]
