[package]
name = "decal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.17", features = [
  "audio_thread_priority",
], optional = true }
cubeb = { version = "0.34", optional = true }
cubeb-core = { version = "0.34", optional = true }
dasp = { version = "0.11", optional = true }
rb = { version = "0.4", optional = true }
rubato = { version = "1.0.1", optional = true }
audioadapter-buffers = { version = "2", optional = true }
symphonia = { git = "https://github.com/aschey/Symphonia", rev = "846b25b8f27f76bdb21990a85341557b3e5ab531", optional = true }
symphonia-adapter-fdk-aac = { git = "https://github.com/aschey/symphonia-adapters", rev = "39e6c51343917bdc47af1e80389692cbdadd806b", optional = true }
symphonia-adapter-libopus = { git = "https://github.com/aschey/symphonia-adapters", rev = "39e6c51343917bdc47af1e80389692cbdadd806b", optional = true }
tap = "1"
thiserror = "2"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Com",
], optional = true }

[dev-dependencies]
crossterm = "0.29"
reedline = "0.45.0"
stream-download = { version = "0.23.0", features = ["reqwest-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
output = ["dep:rb"]
output-cpal = ["output", "dep:cpal"]
output-cubeb = ["output", "cubeb", "cubeb-core", "windows-sys"]
decoder = [
  "dep:symphonia",
  "dep:dasp",
  "dep:rubato",
  "dep:audioadapter-buffers",
]
decoder-aac = ["decoder", "symphonia/aac"]
decoder-fdk-aac = ["decoder", "symphonia-adapter-fdk-aac"]
decoder-libopus = ["decoder", "symphonia-adapter-libopus"]
decoder-adpcm = ["decoder", "symphonia/adpcm"]
decoder-alac = ["decoder", "symphonia/alac"]
decoder-flac = ["decoder", "symphonia/flac"]
decoder-caf = ["decoder", "symphonia/caf"]
decoder-isomp4 = ["decoder", "symphonia/isomp4"]
decoder-mp1 = ["decoder", "symphonia/mp1"]
decoder-mp2 = ["decoder", "symphonia/mp2"]
decoder-mp3 = ["decoder", "symphonia/mp3"]
decoder-mpa = ["decoder", "symphonia/mpa"]
decoder-ogg = ["decoder", "symphonia/ogg"]
decoder-pcm = ["decoder", "symphonia/pcm"]
decoder-aiff = ["decoder", "symphonia/aiff"]
decoder-vorbis = ["decoder", "symphonia/vorbis"]
decoder-wav = ["decoder", "symphonia/wav"]
decoder-ape = ["decoder", "symphonia/ape"]
decoder-id3v1 = ["decoder", "symphonia/id3v1"]
decoder-id3v2 = ["decoder", "symphonia/id3v2"]
decoder-all-codecs = ["decoder", "symphonia/all-codecs"]
decoder-all-formats = ["decoder", "symphonia/all-formats"]
decoder-all-meta = ["decoder", "symphonia/all-meta"]
decoder-all = ["decoder", "symphonia/all"]
decoder-simd = ["symphonia/opt-simd"]
cpal-asio = ["cpal/asio"]
cpal-jack = ["cpal/jack"]
mock = []
default = ["decoder-all", "output-cpal", "mock"]

[[example]]
name = "cubeb"
required-features = ["output-cubeb"]
